Added the arithmetic-pyramid, fixed the stylus to switch from symbols to icons.

--- a/stylus/questions/addition_with_icons.styl
+++ b/stylus/questions/addition_with_icons.styl
@@ -1,7 +1,7 @@
 .addition-with-icons
   font-size 30px
   
-  .symbols, .trace-number
+  .icons, .trace-number
     display inline-block
     text-align center
     vertical-align middle
