--- a/stylus/questions/connect_icons_to_numbers.styl
+++ b/stylus/questions/connect_icons_to_numbers.styl
@@ -10,7 +10,7 @@
     border-radius 50%
     width 30%
   
-  .symbols
+  .icons
     display inline-block
     text-align center
     vertical-align middle
