--- a/stylus/questions/multiplication_with_icons.styl
+++ b/stylus/questions/multiplication_with_icons.styl
@@ -9,10 +9,8 @@
     margin 5px
     border-radius 50%
     padding 10px
-    // width 10%
-    // height 10%
   
-  .symbols
+  .icons
     display inline-block
     text-align center
     vertical-align middle
