First proto of the question editor.  Currently works to create a preview of the question

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -23,6 +23,8 @@ table.layout, td
 @media print
   .maths-page
     page-break-after always
+    
+@require 'editor'
   
 @require 'questions/*'
   
