--- a/stylus/editor.styl
+++ b/stylus/editor.styl
@@ -1,2 +1,32 @@
 .editor
   font-size 15px
+  display flex
+  flex-direction row
+  
+  .question-list
+    width 300px
+    border-right 1px solid black
+    margin-right 10px
+    .question-item
+      cursor pointer
+      height 20px
+      .checkmark
+        margin-left 3px
+      .add-button
+        margin 0
+        margin-left 3px
+        height 18px
+        visibility hidden
+      &:hover
+        .add-button
+          visibility visible
+  
+  .editor-question
+    .title
+      display flex
+      justify-content space-between
+      margin 10px
+      h1
+        margin 0
+      div
+        text-align right
