--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -2,6 +2,10 @@ body
   font-family monospace
   font-size 30px
   
+button
+  font-family monospace
+  font-size 15px
+  
 table.layout, td
   border 1px solid black
   border-collapse collapse
