Added the grid image copy. Fixed bug where canvas based questions were not updating on config change.

--- a/stylus/questions/grid_image_copy.styl
+++ b/stylus/questions/grid_image_copy.styl
@@ -1,4 +1,4 @@
-.block-copy
+.grid-image-copy
   text-align center
   table
     display inline-block
@@ -6,13 +6,20 @@
     border-collapse collapse
     tr
       td
+        border 1px solid #000
         width 30px
         height 30px
         
   table.shape
-    // border 1px solid black
+    border 1px solid black
     tr
       td
         border none
+        padding 0
+          
       td.shade
-        background-color #999
+        // background-color #999
+        span
+          border 15px solid #999
+          font-size 0
+
