--- a/stylus/editor.styl
+++ b/stylus/editor.styl
@@ -4,9 +4,18 @@
   flex-direction row
   
   .question-list
-    width 300px
+    width 400px
     border-right 1px solid black
-    margin-right 10px
+    padding 0
+    margin 10px
+    .generate-button
+      border 1px solid black
+      padding 10px 5px
+      text-align center
+      display inline-block
+      text-decoration none
+      width calc(100% - 30px)
+      margin-bottom 10px
     .question-item
       cursor pointer
       height 20px
