--- a/stylus/editor.styl
+++ b/stylus/editor.styl
@@ -4,7 +4,7 @@
   flex-direction row
   
   .question-list
-    width 400px
+    min-width 250px
     border-right 1px solid black
     padding 0
     margin 10px
