Added trace number and triangle angle questions.

--- a/stylus/questions/trace_number.styl
+++ b/stylus/questions/trace_number.styl
@@ -1,7 +1,7 @@
 .trace-number
   font-size 40px
   text-align center
-  .symbols
+  .icons
     display inline-block
     text-align center
     vertical-align middle
