Classified all questions into appropriate levels

--- a/stylus/editor.styl
+++ b/stylus/editor.styl
@@ -21,9 +21,13 @@
       width calc(100% - 30px)
       margin-bottom 5px
       
+    .question-level-header
+      font-weight bold
+      margin-top 10px
     .question-item
       cursor pointer
       height 20px
+      margin-left 10px
       .checkmark
         margin-left 3px
       .add-button
