--- a/stylus/editor.styl
+++ b/stylus/editor.styl
@@ -48,3 +48,25 @@
         margin 0
       div
         text-align right
+
+    .editor-question
+      border 1px solid #000        
+    .small-square-editor
+      max-width 250px
+      max-height 250px
+      
+    .tall-rect-editor
+      max-width 250px
+      max-height 500px
+      
+    .wide-rect-editor
+      max-width 500px
+      max-height 250px
+      
+    .large-square-editor
+      max-width 500px
+      max-height 500px
+      
+    .double-large-square-editor
+      max-width 1000px
+      max-height 500px
