implemented the number sequence question.

--- a/stylus/editor.styl
+++ b/stylus/editor.styl
@@ -71,3 +71,21 @@
     .double-large-square-editor
       max-width 1100px
       max-height 500px
+      
+  .editor-prompt
+    position fixed
+    z-index 2000
+    padding 10px
+    border 1px solid #000
+    width 300px
+    background-color #FFF
+    left 320px
+    
+  .create-config-prompt
+    top 20px
+    
+  .load-config-prompt
+    top 100px
+  
+  .add-question-prompt
+    top 300px
