--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -24,11 +24,15 @@ table.layout, td
 .maths-page
   margin 20px 0
   
+.small-text
+  font-size 15px
+  
 @media print
   .maths-page
     page-break-after always
     
 @require 'editor'
+@require 'home'
   
 @require 'questions/*'
   
