Added the animal leg math questions.

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -27,6 +27,9 @@ table.layout, td
 .small-text
   font-size 15px
   
+.center
+  text-align center
+  
 @media print
   .maths-page
     page-break-after always
