Added stacked addition qustion type. Refactored vertical arithmetic styles.

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -30,6 +30,9 @@ table.layout, td
 .center
   text-align center
   
+.large-text
+  font-size 40px
+  
 @media print
   .maths-page
     page-break-after always
