Reduced size of shape projections to large square. Made maths table missing mode a little easier.

--- a/stylus/questions/shape_projections.styl
+++ b/stylus/questions/shape_projections.styl
@@ -1,6 +1,6 @@
 .shape-projections
   canvas
-    display inline-block
+    display block
   .projection-table
     display inline-block
     margin-right 10px
