converted the find_to_add and perimeter_and_area to tall rect.

--- a/stylus/questions/find_to_add.styl
+++ b/stylus/questions/find_to_add.styl
@@ -1,12 +1,15 @@
 .find-to-add
+  font-size 16px
+  text-align center
   p
-    margin 10px
+    margin 5px
   table
+    display inline-block
     border 1px solid black
-    margin 10px
+    margin 5px
   td
     border none
-    width 40px
-    height 40px
+    width 35px
+    height 35px
     font-size 20px
     text-align center
