--- a/stylus/questions/perimeter_and_area.styl
+++ b/stylus/questions/perimeter_and_area.styl
@@ -1,7 +1,8 @@
 .perimeter-and-area
   canvas
-    display inline-block
+    // display inline-block
   .questions
-    display inline-block
+    // display inline-block
+    margin-right 80px
     text-align right
     font-size 20px
