--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -10,9 +10,10 @@ table.layout, td
   border 1px solid black
   border-collapse collapse
   
-  td
-    width 250px
-    height 200px
+  > tr
+    > td
+      width 250px
+      height 200px
 
   td[rowspan='2']
     height 400px
