Added the balanced equations question

--- a/stylus/questions/balanced_equations.styl
+++ b/stylus/questions/balanced_equations.styl
@@ -1,4 +1,4 @@
-.missing-operation
+.balanced-equations
   font-size 28px
   padding 10px
   line-height 70px
@@ -9,3 +9,4 @@
     height 35px
     border 1px solid black
     margin-bottom -10px
+    
